# CameraManagerCore

./: .gitignore  CMakeLists.txt  README.md  Specializations.hpp  main.cpp  test_main.cpp
cmake/modules/: FindGSOAP.cmake  FindOnvifWrapper.cmake  FindSQLite3.cmake
modules/CameraRecorder/: CMakeLists.txt  main.cpp
modules/CameraRecorder/cmake/: FindFFmpeg.cmake
modules/CameraRecorder/source/: Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  EventHandler.cpp  EventHandler.hpp  Model.cpp  Model.hpp
source/cameras/: CameraContextVisitors.hpp  CameraLooper.hpp  CamerasContext.hpp
source/cameras/interactions/: Axis.hpp  InteractionsCommon.hpp  OnvifPodReflection.cpp
source/cameras/parcers/: JsonOnvifParcer.hpp
source/cameras/processors/: AllProcessors.hpp  CameraRecorderProcessor.hpp  CameraStatusProcessor.hpp  IdleActionProcessor.hpp  LockFrameProcessor.hpp
source/database/adapters/: Adapter.hpp  SqlLanguageAdapter.cpp  SqlLanguageAdapter.hpp  SqliteAdapter.hpp
source/database/statements/: AllStatements.hpp  SqliteCameraActionStatement.hpp  SqliteCameraStatement.hpp  SqliteEventArchiveSettingsStatement.hpp  SqliteEventStatements.hpp  SqlitePermissionStatements.hpp  SqliteSessionsStatements.hpp  SqliteSettingsStatement.hpp  SqliteUserCamerasStatement.hpp  SqliteUserPermissionsStatement.hpp  SqliteUserStatement.hpp  Statements.hpp
source/database/subscriber/: DBSubscriber.hpp
source/database/utility/: SqliteUtility.cpp  SqliteUtility.hpp
source/events/: EventContext.hpp  EventSubscriber.hpp
source/iss/: IssConnection.hpp  IssSubscriber.hpp
source/model/: Action.cpp  Action.hpp  Camera.cpp  Camera.hpp  CameraInformation.cpp  CameraInformation.hpp  CameraLockFrame.cpp  CameraLockFrame.hpp  Common.cpp  Common.hpp  Event.cpp  Event.hpp  EventArchiveSettings.cpp  EventArchiveSettings.hpp  ModelContext.cpp  ModelContext.hpp  Permission.cpp  Permission.hpp  Sessions.cpp  Sessions.hpp  Settings.cpp  Settings.hpp  User.cpp  User.hpp  UserCameras.cpp  UserCameras.hpp  UserPermissions.cpp  UserPermissions.hpp
source/model/detail/: ContextMisc.cpp  ContextMisc.hpp  Detectors.hpp
source/model/parcers/: JsonParcer.cpp  JsonParcer.hpp
source/schemas/: All.hpp
source/schemas/decorators/: CatchErrorDecorator.hpp  CorsDecorator.hpp  InputParametersDecorator.hpp  PermissionCheckerDecorator.hpp  SessionCheckerDecorator.hpp
source/schemas/details/: ContextsWrapper.hpp  InputParameters.hpp  ParseFromUrl.cpp  ParseFromUrl.hpp  ResponseBuilder.hpp  Utility.hpp
source/schemas/http/: HttpClientServer.hpp
source/schemas/model/: Helpers.cpp  Helpers.hpp  OperationResponse.cpp  OperationResponse.hpp  Parcers.hpp  SignalStatus.cpp  (+1 more)
source/session/: SecreteKeyGenerator.hpp  Session.hpp  SessionContext.hpp
source/signals/: SignalContext.hpp
source/thread_pool/: ExecutionWrapper.hpp  Misc.hpp  ThreadPoolContext.hpp
source/utility/: Either.hpp  FuncUtility.hpp  LoggerSettings.cpp  LoggerSettings.hpp  PasswordCryptor.cpp  PasswordCryptor.hpp  RandomGenerator.cpp  RandomGenerator.hpp  TupleUtility.hpp  VisitorHelper.hpp
swagger/http/: camera.yaml  common.yaml  events.yaml  login.yaml  model.yaml
test/: CameraContextTest.cpp  CameraProcessorsTest.cpp  DBAdapterTest.cpp  DBStatementsTest.cpp  EventContextTest.cpp  ExecutionWrapperTest.cpp  HttpSchemasTest.cpp  IssIntegrationTest.cpp  ModelContextTest.cpp  PasswordCryptor.cpp  SessionTests.cpp  SignalTest.cpp  SubscribersTest.cpp  ThreadPoolTest.cpp
(+17 files in other folders)
